<resources>
    <string name="app_chinese">形声</string>
    <string name="app_name">形声</string>
    <string name="app_english">phonetic</string>
    <string name="team">Sirius</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_camera_fragment">Hello camera fragment</string>
    <string name="hello_user_fragment">Hello user fragment</string>
    <string name="hello_video_fragment">Hello video fragment</string>
    <string name="video_default_name">default</string>
    <string name="default_length">00:15</string>
    <string name="default_author">智能配乐</string>
    <string name="upload">上传</string>
    <string name="choose_music">选择音乐</string>
    <string name="auto_bgm">智能配乐</string>
    <string name="search_favorite_music">搜索你喜欢的音乐</string>
    <string name="hot_composer">音乐试听</string>
    <string name="auto_make">智能生成</string>
    <string name="next_step">下一步</string>

    <string name="settings">设置</string>
    <string name="author">Zipple</string>
    <string name="more">更多</string>
    <string name="about">关于</string>
    <string name="logout">退出登录</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
