<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:padding="8dp"
    android:gravity="center_vertical"
    android:background="#f2f2f2">

    <ImageView
        android:id="@+id/music_avatar"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:layout_weight="1"
        android:src="@mipmap/default_music_avatar"
        android:contentDescription="@string/app_english" />
    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:orientation="vertical">

       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="vertical">
           <TextView
               android:id="@+id/music_name"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/app_english"/>
           <TextView
               android:id="@+id/music_author"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/auto_make"/>
       </LinearLayout>

        <TextView
            android:id="@+id/music_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/round_border"
            android:textColor="@color/colorWhite"
            android:text="@string/default_length"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center">
          <ImageView
              android:id="@+id/music_play"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:src="@mipmap/play"
              android:contentDescription="@string/app_english"/>
    </LinearLayout>
</LinearLayout>