<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true">

    <zippler.cn.xs.component.FullVideoView
        android:id="@+id/video_show"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

   <ImageView
       android:id="@+id/poster"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:src="@mipmap/poster"
       android:adjustViewBounds="true"
       android:scaleType="fitXY"
       android:contentDescription="@string/app_english"
       android:visibility="visible"/>


    <LinearLayout
        android:id="@+id/extra"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:paddingStart="8dp"
           android:gravity="center_vertical">
           <TextView
               android:id="@+id/video_name"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="我还是喜欢你，像风走了八千里"
               android:typeface="serif"
               android:textSize="20sp"
               android:padding="6dp"
               android:textColor="#e8e8e8"/>
          <LinearLayout
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="horizontal">
              <TextView
                  android:id="@+id/video_time"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="2018年5月5日  20:16:41"
                  android:textSize="12sp"
                  android:paddingStart="10dp"
                  android:textColor="#e8e8e8"
                  tools:ignore="RtlSymmetry" />

              <TextView
                  android:id="@+id/length"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/default_length"
                  android:paddingStart="5dp"
                  android:paddingEnd="5dp"
                  android:textSize="12sp"
                  android:textColor="#e8e8e8"
                  android:layout_marginStart="10dp"
                  android:background="@drawable/round_border"
                  />

              <TextView
                  android:id="@+id/author"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/default_author"
                  android:textSize="12sp"
                  android:paddingStart="5dp"
                  android:paddingEnd="5dp"
                  android:textColor="@color/red_tags"
                  tools:ignore="RtlSymmetry"
                  android:layout_marginStart="10dp"
                  android:background="@drawable/hollow_round_border"/>
          </LinearLayout>
       </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <zippler.cn.xs.component.CircleImageView
                android:id="@+id/avatar"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:adjustViewBounds="true"
                android:src="@mipmap/avatar"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"/>



        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/mask"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/play"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@mipmap/play"
            android:layout_centerInParent="true"
            android:contentDescription="@string/app_chinese" />
    </RelativeLayout>

</RelativeLayout>